Refactor matches to segments